log
Tue 09 May 2023 11:53:05 PM UTC: 
 tests:  0|4
total_score: 0/70
78f4a57
Wed 10 May 2023 12:18:38 AM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
2b83d02
Wed 10 May 2023 12:19:37 AM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
31fb622
Wed 10 May 2023 12:20:11 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:23: error: too few arguments to function ‘calloc’
   37 |     newHeap = (Heap*) calloc(sizeof(Heap));
      |                       ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
In file included from test.c:4:
heap.c:40:26: error: too few arguments to function ‘calloc’
   40 |     newHeap->heapArray = calloc(sizeof(heapElem));
      |                          ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
affc676
Wed 10 May 2023 12:20:38 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
22b4b9b
Wed 10 May 2023 12:21:36 AM UTC: 
 heap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|0
474cfef
Wed 10 May 2023 12:21:45 AM UTC: 
 heap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
f651c2d
Wed 10 May 2023 12:23:07 AM UTC: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
1d185ea
Wed 10 May 2023 12:24:20 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:43:14: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘hashArray’; did you mean ‘heapArray’?
   43 |     newHeap->hashArray = NULL;
      |              ^~~~~~~~~
      |              heapArray
Compilation failed
a097bc8
Wed 10 May 2023 12:24:30 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:43:23: error: ‘heapElem’ {aka ‘struct nodo’} has no member named ‘hashArray’
   43 |     newHeap->heapArray->hashArray = NULL;
      |                       ^~
Compilation failed
c74c88a
Wed 10 May 2023 12:24:39 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:43:23: error: ‘heapElem’ {aka ‘struct nodo’} has no member named ‘heapArray’
   43 |     newHeap->heapArray->heapArray = NULL;
      |                       ^~
Compilation failed
01168d0
Wed 10 May 2023 12:24:52 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0d0f10e
Wed 10 May 2023 12:25:15 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c2893ac
Wed 10 May 2023 12:26:00 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
f2025ba
Wed 10 May 2023 12:27:02 AM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
c39207f
Wed 10 May 2023 12:28:55 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:5: error: unknown type name ‘retur’
   21 |     retur pq->heapArray[0];
      |     ^~~~~
heap.c:21:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   21 |     retur pq->heapArray[0];
      |             ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
03f3426
Wed 10 May 2023 12:30:19 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:25: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   21 |     return pq->heapArray[0];
      |            ~~~~~~~~~~~~~^~~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
72228d6
Wed 10 May 2023 12:30:32 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:28: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   21 |     return pq->heapArray[0]->data;
      |                            ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
24202df
Wed 10 May 2023 12:30:50 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c3d89d8
Wed 10 May 2023 12:32:20 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
90bc3aa
